// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Number Default 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 1000
    </div>
    <div>
      
      1,000
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 9000000
    </div>
    <div>
      
      9,000,000
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 0.01
    </div>
    <div>
      
      0.01
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 111.2
    </div>
    <div>
      
      111.2
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Number Integration: with different typographies 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      primary
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      secondary
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      tertiary
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 cHzAen"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      caption
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ejTVkr"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      title1
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      title2
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      title3
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      hero
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lmsdTq"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Number Invalid value 1`] = `"-"`;

exports[`Storyshots Molecules | Number Number ticks 1`] = `
Array [
  <pre>
    ticks = [
  {
    "decimals": 4,
    "fromPrice": 0,
    "toPrice": 0.9999,
    "tick": 0.0001
  },
  {
    "decimals": 2,
    "fromPrice": 1,
    "toPrice": 99999.98,
    "tick": 0.01
  },
  {
    "decimals": 1,
    "fromPrice": 100000,
    "toPrice": 999999.89,
    "tick": 0.1
  }
]
  </pre>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        value = 0.55555
      </div>
      <div>
        
        0.5556
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        value = 10.333
      </div>
      <div>
        
        10.33
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        value = 10.5
      </div>
      <div>
        
        10.50
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        value = 100001.22
      </div>
      <div>
        
        100,001.2
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Number Number with 2 decimals  1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 10.378
    </div>
    <div>
      
      10.38
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 10.333
    </div>
    <div>
      
      10.33
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 10
    </div>
    <div>
      
      10.00
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 10.5
    </div>
    <div>
      
      10.50
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Number Number with currency 1`] = `
Array [
  "",
  "2.3",
  " SEK",
]
`;

exports[`Storyshots Molecules | Number Number with currency as different size 1`] = `
Array [
  <div
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
  >
    <div
      className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
    >
      
      2.3
       SEK
    </div>
    <span
      aria-hidden={true}
    >
      
      2.3
       
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC Number__TypographyWithInheritedWeight-sc-1pkc1h1-0 bqBnmb"
      >
        SEK
      </span>
    </span>
  </div>,
  <div
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lhwrhZ"
  >
    <div
      className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
    >
      
      2.3
       SEK
    </div>
    <span
      aria-hidden={true}
    >
      
      2.3
       
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Number__TypographyWithInheritedWeight-sc-1pkc1h1-0 bqBnmb"
      >
        SEK
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Molecules | Number Number with min/max digits 1`] = `
<div>
  
  10.38
  
  10.10
  
  10.333
  
  10.10
  
  10.6667
  
  10.00
</div>
`;

exports[`Storyshots Molecules | Number Number with percentage 1`] = `
Array [
  "",
  "2.3",
  "%",
]
`;

exports[`Storyshots Molecules | Number Number with sign 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 2
    </div>
    <div>
      +
      2
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 0
    </div>
    <div>
      
      0
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = -1
    </div>
    <div>
      
      -1
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Number Regression: -0 should be 0 1`] = `
Array [
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        value = 0.1
      </div>
      <div>
        
        0
      </div>
    </div>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        value = 0.1
      </div>
      <div>
        
        0
      </div>
    </div>
  </div>,
  ",",
]
`;

exports[`Storyshots Molecules | Number Regression: value is positive, but rounded value is 0 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      value = 0.1
    </div>
    <div>
      
      0
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Number null currency 1`] = `"-"`;
